Added get products by store id
fix mapping of creator name
