# green-harvest-app/greenharvest-backend/routes/productRoutes.js
@@ -1,9 +1,10 @@
 const express = require("express");
-const { getProducts, createProduct, getProductById, updateProduct, deleteProduct } = require("../controllers/productController");
+const { getProducts, createProduct, getProductById, getProductsByStoreId, updateProduct, deleteProduct } = require("../controllers/productController");
 
 const router = express.Router();
 
 router.get("/", getProducts);
+router.get("/store/:storeId", getProductsByStoreId);
 router.post("/", createProduct);
 router.get("/:id", getProductById);
 router.put("/:id", updateProduct);
